[package]
name = "ptstart_int_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
axum = "0.7.5"
clap = { version = "4.5.6", features = ["derive"] }
color-print = "0.3.6"
eyre = "0.6.12"
http = "1.1.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
